@@ -1,5 +1,6 @@
 [1.0.6]
 - Support for bezier curve logic in Beam Drawable. Adds left and right tangents.
+- Sprite animations are now supported with FlipBook module
 
 [1.0.5]
 - legacy libGDX particle file importer full functionality
